--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 .DS_Store
 .help.swp
 .vscode
-algorithms_db
 *.out
 *.in
+algorithms_db
 templates
 condense.py
 *.pdf
 *.txt
-input
-output
 Makefile
 __pycache__
 tasks
+*/solutions/*/*-Save.*
+*/solutions/*/data
+
+
