--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 .DS_Store
 .help.swp
 .vscode
+
 *.out
 *.in
-algorithms_db
-templates
-condense.py
 *.pdf
 *.txt
+
 Makefile
 __pycache__
 tasks
 */solutions/*/*-Save.*
-*/solutions/*/data
-
-
+*/solutions/*/data/
